WEB-24 Fix image on IE11

--- a/_sass/hl2/_main.scss
+++ b/_sass/hl2/_main.scss
@@ -140,16 +140,11 @@ body {
   }
 
   .hl2-img-fluid-fix-ie11 {
-    width: 100%;
+    width: 100%\9;
   }
 
   .hl2-img-fluid-fix-ie11-200 {
     width: 150px;
-  }
-
-  // carousel
-  .hl2-fullwidth-fix-ie11 {
-    width: 100%;
   }
 
   //
